feat(): update spacing in graph visualization

--- a/src/main/webapp/static/lm-hierarchy.html
+++ b/src/main/webapp/static/lm-hierarchy.html
@@ -70,7 +70,9 @@
                 },
                 layout: {
                     hierarchical: {
-                        direction: "LR"
+                        direction: "LR",
+                        levelSeparation: 450,
+                        nodeSpacing: 50
                     }
                 },
                 physics: false
